# GraphProject

./: CMakeLists.txt  README.md  main.cpp
src/SeriousGraphTools/: Alghoritms.cpp  Alghoritms.h  SimpleGraph.cpp  SimpleGraph.h  Tools.h
src/SeriousGraphTools/Graph/: Edge.h  Node.h
src/SeriousGraphTools/IO/: Export.cpp  Export.h  Import.cpp  Import.h
src/SeriousGraphTools/Import/: Import.cpp
src/libs/nlohmann/: json.hpp
